deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bet-k8s-api
  labels:
    app.kubernetes.io/name: "bet-k8s-api"
    app.kubernetes.io/part-of: "bet.k8s"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: bet-k8s-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "bet-k8s-api"
        app.kubernetes.io/part-of: "bet.k8s"
    spec:
      containers:
        - name: bet-k8s-api
          image: kdcllc/bet:apihpa
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
              cpu: "250m"
---
kind: Service
apiVersion: v1
metadata:
  name: bet-k8s-api
  labels:
    app.kubernetes.io/name: "bet-k8s-api"
    app.kubernetes.io/part-of: "bet.k8s"
spec:
  selector:
    app.kubernetes.io/name: bet-k8s-api
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
# https://cert-manager.io/docs/usage/ingress/
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bet-k8s-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-v1
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
  labels:
    app.kubernetes.io/part-of: "bet.k8s"
spec:
  tls:
    - hosts:
        - betapi.kingdavidconsulting.com
      secretName: betapi-secret-tls
  rules:
    - http:
        paths:
          - backend:
              service:
                name: bet-k8s-api
                port:
                  number: 80
            pathType: Prefix
            path: /()(.*)
    - host: betapi.kingdavidconsulting.com
      http:
        paths:
          - backend:
              service:
                name: bet-k8s-api
                port:
                  number: 80
            pathType: Prefix
            path: /()(.*)
